--- a/helloworld-project/pom.xml
+++ b/helloworld-project/pom.xml
@@ -8,7 +8,7 @@
     <groupId>com.jenkov</groupId>
 
     <artifactId>hello-world</artifactId>
-
+    <packaging>war</packaging>
     <version>1.0.0</version>
 
 </project>
