--- a/helloworld-project/pom.xml
+++ b/helloworld-project/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>craetewar</groupId>
   <artifactId>HelloWorld</artifactId>
-  <version></version>
+<!--  <version></version> -->
   <packaging>war</packaging>
   <name>HelloWorld</name>
   
