--- a/helloworld-project/pom.xml
+++ b/helloworld-project/pom.xml
@@ -2,14 +2,14 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>craetewar</groupId>
   <artifactId>HelloWorld</artifactId>
-<!--  <version></version> -->
+  <version>0.0</version>
   <packaging>war</packaging>
   <name>HelloWorld</name>
   
    <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-<!--        <version>1.5.2.RELEASE</version>  -->
+        <version>1.5.2.RELEASE</version>
     </parent>
    <dependencies>
 		<dependency>
